Add standard endpoint prefix for some api; Add multiple application property config